Refactor pet agent logic (WIP)